# kafka-sandbox

./: .gitignore  README.rst  pyproject.toml
kafka_sandbox/: producer.py
tests/: test_kafka_sandbox.py
