[tool.poetry]
name = "kafka-sandbox"
version = "0.1.0"
description = ""
authors = ["Walsh, Matthew"]

[tool.poetry.dependencies]
python = "^3.7"
aiokafka = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kafka-demo = "kafka_sandbox.producer:main"
